--- a/docs/organizations/security/toc.yml
+++ b/docs/organizations/security/toc.yml
@@ -1,6 +1,6 @@
 - name: About security and identity  
   href: about-security-identity.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
-- name: Quickstart
+- name: Quickstarts
   items:
   - name: View permissions 
     href: view-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
