--- a/docs/notifications/toc.yml
+++ b/docs/notifications/toc.yml
@@ -1,13 +1,13 @@
 - name: About notifications
-  href: about-notifications.md
+  href: about-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: Navigating the UI
-  href: navigating-the-ui.md 
+  href: navigating-the-ui.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json 
 - name: Concepts
   items:
   - name: Events and notifications
-    href: concepts-events-and-notifications.md
+    href: concepts-events-and-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: How email recipients are determined
-    href: concepts-email-recipients.md
+    href: concepts-email-recipients.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: Tutorials
   items:
   - name: "Follow work & pull requests"
@@ -17,50 +17,50 @@
   - name: Set alerts, get notified when changes occur
     href: ../boards/queries/alerts-and-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Manage team and group notifications
-    href: manage-team-group-notifications.md
+    href: manage-team-group-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: How-to guides
   items:
   - name: Manage organization notifications
-    href: manage-organization-notifications.md
+    href: manage-organization-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Manage organization default delivery settings
-    href: manage-organization-notifications-settings.md
+    href: manage-organization-notifications-settings.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: View notification statistics for your organization
-    href: view-organization-notification-statistics.md
+    href: view-organization-notification-statistics.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Change your preferred email address
-    href: change-email-address.md
+    href: change-email-address.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Use subscription logging for troubleshooting
-    href: use-subscription-logging.md
+    href: use-subscription-logging.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Exclude yourself from notification of events you initiated
-    href: exclude-self-from-email.md
+    href: exclude-self-from-email.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: "Use @mentions to further discussion"
-    href: at-mentions.md
+    href: at-mentions.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: "Use #ID to link to work items"
-    href: add-links-to-work-items.md
+    href: add-links-to-work-items.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Send notifications to third-party services (Slack, Teams, etc.)
-    href: integrate-third-party-services.md
+    href: integrate-third-party-services.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Collaborate in a Team room
-    href: collaborate-in-a-team-room.md
+    href: collaborate-in-a-team-room.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Unsubscribe from default notification
-    href: unsubscribe-default-notification.md
+    href: unsubscribe-default-notification.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: Troubleshooting
   items:
   - name: Why am I not getting an email
-    href: troubleshoot-not-getting-email.md
+    href: troubleshoot-not-getting-email.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Why am I getting this email
-    href: troubleshoot-unexpected-email.md
+    href: troubleshoot-unexpected-email.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Why are my emails delayed
-    href: troubleshoot-delayed-email.md
+    href: troubleshoot-delayed-email.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Contacting support
-    href: troubleshoot-contact-support.md
+    href: troubleshoot-contact-support.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: Reference
   items:
   - name: Default notifications
-    href: oob-built-in-notifications.md
+    href: oob-built-in-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Events
-    href: oob-supported-event-types.md
+    href: oob-supported-event-types.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Default permissions (Security)  
     href: ../project/wiki/wiki-readme-permissions.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: FAQs 
-    href: faq-notifications.md 
+    href: faq-notifications.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 
 
