--- a/docs/security-access-billing/breadcrumb/toc.yml
+++ b/docs/security-access-billing/breadcrumb/toc.yml
@@ -3,5 +3,5 @@
   topicHref: /azure/devops/index
   items: 
   - name: Security, access, & billing
-    tocHref: /azure/devops/
+    tocHref: /azure/devops/security/
     topicHref: /azure/devops/security-access-billing/index
