change Notifications breadcrumbs

--- a/docs/notifications/breadcrumb/toc.yml
+++ b/docs/notifications/breadcrumb/toc.yml
@@ -2,6 +2,6 @@
   tocHref: /azure/devops/
   topicHref: /azure/devops/index
   items: 
-  - name: Collaborate
+  - name: Configure & customize 
     tocHref: /azure/devops/notifications/
     topicHref: /azure/devops/organizations/index
