modified master breadcrumb

--- a/docs/organizations/toc.yml
+++ b/docs/organizations/toc.yml
@@ -27,7 +27,9 @@
       href: ./settings/manage-authorizations.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: Organizations
   items:
-  - name: Overview
+  - name: Plan your organization structure
+    href:  ./user-guide/plan-your-azure-devops-org-structure.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
+  - name: Overview settings
     items:
     - name: Rename organization
       href: ./accounts/rename-vsts-organization.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
