--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -27,9 +27,6 @@
     - name: SharePoint Dashboards (Deprecated)
       tocHref: /azure/devops/report/sharepoint-dashboards/
       topicHref: /azure/devops/report/index
-  - name: Notifications
-    tocHref: /azure/devops/notifications/
-    topicHref: /azure/devops/organizations/index
   - name: Collaborate
     tocHref: /azure/devops/project/
     topicHref: /azure/devops/project/index
@@ -72,12 +69,33 @@
     tocHref: /azure/devops/organizations/settings/
     topicHref: /azure/devops/organizations/index
     items:
+    - name: User preferences
+      tocHref: /azure/devops/project/navigation/
+      topicHref: /azure/devops/organizations/settings/set-your-preferences
+    - name: Organizations
+      tocHref: /azure/devops/organizations/accounts/
+      topicHref: /azure/devops/user-guide/plan-your-azure-devops-org-structure
     - name: Projects
       tocHref: /azure/devops/organizations/projects/
-      topicHref: /azure/devops/organizations/index
+      topicHref: /azure/devops/organizations/projects/about-projects
+    - name: Teams
+      tocHref: /azure/devops/organizations/settings/scale/
+      topicHref: /azure/devops/organizations/settings/about-teams-and-settings
     - name: Process
       tocHref: /azure/devops/reference/
       topicHref: /azure/devops/organizations/index
+    - name: Notifications
+      tocHref: /azure/devops/notifications/
+      topicHref: /azure/devops/notifications/about-notifications
+    - name: Pipelines (Build and Release)
+      tocHref: /azure/devops/pipelines/
+      topicHref: /azure/devops/pipelines/agents/pools-queues
+    - name: Repos (Code)
+      tocHref: /azure/devops/repos/
+      topicHref: /azure/devops/repos/git/create-new-repo
+    - name: Test
+      tocHref: /azure/devops/test/
+      topicHref: /azure/devops/test/how-long-to-keep-test-results
   - name: Security, access, & billing
     tocHref: /azure/devops/security-access-billing/
     topicHref: /azure/devops/security-access-billing/index
