--- a/docs/organizations/toc.yml
+++ b/docs/organizations/toc.yml
@@ -27,7 +27,7 @@
       href: ./settings/manage-authorizations.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
 - name: Organizations
   items:
-  - name: Plan your organization structure
+  - name: About organizations
     href:  ../user-guide/plan-your-azure-devops-org-structure.md?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
   - name: Overview settings
     items:
