--- a/docs/notifications/breadcrumb/toc.yml
+++ b/docs/notifications/breadcrumb/toc.yml
@@ -1,9 +1,11 @@
 - name: Azure DevOps
   tocHref: /azure/devops/
   topicHref: /azure/devops/index
+  items: 
   - name: Configure & customize
     tocHref: /azure/devops/organizations/
     topicHref: /azure/devops/organizations/index
+    items: 
     - name: Notifications
       tocHref: /azure/devops/notifications/
       topicHref: /azure/devops/notifications/about-notifications
