--- a/docs/organizations/breadcrumb/toc.yml
+++ b/docs/organizations/breadcrumb/toc.yml
@@ -2,6 +2,34 @@
   tocHref: /azure/devops/
   topicHref: /azure/devops/index
   items: 
-  - name: Configure & customize 
-    tocHref: /azure/devops/organizations/settings/
+  - name: Configure & customize
+    tocHref: /azure/devops/organizations/
     topicHref: /azure/devops/organizations/index
+    items:
+    - name: User preferences
+      tocHref: /azure/devops/project/navigation/
+      topicHref: /azure/devops/organizations/settings/set-your-preferences
+    - name: Organizations
+      tocHref: /azure/devops/organizations/accounts/
+      topicHref: /azure/devops/user-guide/plan-your-azure-devops-org-structure
+    - name: Projects
+      tocHref: /azure/devops/organizations/projects/
+      topicHref: /azure/devops/organizations/projects/about-projects
+    - name: Teams
+      tocHref: /azure/devops/organizations/settings/scale/
+      topicHref: /azure/devops/organizations/settings/about-teams-and-settings
+    - name: Process
+      tocHref: /azure/devops/reference/
+      topicHref: /azure/devops/organizations/index
+    - name: Notifications
+      tocHref: /azure/devops/notifications/
+      topicHref: /azure/devops/notifications/about-notifications
+    - name: Pipelines (Build and Release)
+      tocHref: /azure/devops/pipelines/
+      topicHref: /azure/devops/pipelines/agents/pools-queues
+    - name: Repos (Code)
+      tocHref: /azure/devops/repos/
+      topicHref: /azure/devops/repos/git/create-new-repo
+    - name: Test
+      tocHref: /azure/devops/test/
+      topicHref: /azure/devops/test/how-long-to-keep-test-results
