--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -87,6 +87,9 @@
     - name: Notifications
       tocHref: /azure/devops/notifications/
       topicHref: /azure/devops/notifications/about-notifications
+    - name: Service hooks
+      tocHref: /azure/devops/service-hooks/
+      topicHref: /azure/devops/service-hooks/index
     - name: Pipelines (Build and Release)
       tocHref: /azure/devops/pipelines/
       topicHref: /azure/devops/pipelines/agents/pools-queues
