--- a/docs/organizations/projects/breadcrumb/toc.yml
+++ b/docs/organizations/projects/breadcrumb/toc.yml
@@ -3,5 +3,9 @@
   topicHref: /azure/devops/index
   items: 
   - name: Configure & customize
-    tocHref: /azure/devops/organizations/projects/
+    tocHref: /azure/devops/organizations/
     topicHref: /azure/devops/organizations/index
+    items: 
+    - name: Projects
+      tocHref: /azure/devops/organizations/projects/
+      topicHref: /azure/devops/organizations/projects/about-projects
