service hooks, M& E plus C&C

--- a/docs/marketplace-extensibility/toc.yml
+++ b/docs/marketplace-extensibility/toc.yml
@@ -6,7 +6,7 @@
   href: ../extend/toc.yml 
 - name: Integrate applications
   href: ../integrate/toc.yml 
-- name: Service Hooks
+- name: Service hooks
   href: ../service-hooks/toc.yml
 - name: Additional integrations
   items:
