--- a/docs/security-access-billing/breadcrumb/toc.yml
+++ b/docs/security-access-billing/breadcrumb/toc.yml
@@ -3,5 +3,25 @@
   topicHref: /azure/devops/index
   items: 
   - name: Security, access, & billing
-    tocHref: /azure/devops/security/
+    tocHref: /azure/devops/organizations/security/
     topicHref: /azure/devops/security-access-billing/index
+    items:
+    - name: Get started
+      tocHref: /azure/devops/user-guide/
+      topicHref: /azure/devops/user-guide/project-admin-tutorial
+    - name: Security, access, & identity
+      tocHref: /azure/devops/organizations/security/
+      topicHref: /azure/devops/organizations/security/about-security-identity
+    - name: Organizations
+      tocHref: /azure/devops/organizations/accounts/
+      topicHref: /azure/devops/organizations/accounts/organization-management
+    - name: Billing
+      tocHref: /azure/devops/organizations/billing/
+      topicHref: /azure/devops/organizations/billing/overview
+    - name: Audit
+      tocHref: /azure/devops/organizations/settings/
+      topicHref: /azure/devops/organizations/settings/azure-devops-auditing
+    - name: Authentication
+      tocHref: /azure/devops/organizations/integrate/
+      topicHref: /azure/devops/integrate/get-started/authentication/authentication-guidance
+
