--- a/docs/get-started/breadcrumb/toc.yml
+++ b/docs/get-started/breadcrumb/toc.yml
@@ -5,3 +5,19 @@
   - name: Get started
     tocHref: /azure/devops/get-started/
     topicHref: /azure/devops/get-started/index
+    items:
+    - name: Start using Azure DevOps
+      tocHref: /azure/devops/user-guide/
+      topicHref: /azure/devops/user-guide/what-is-azure-devops
+    - name: Web portal navigation
+      tocHref: /azure/devops/project/navigation/
+      topicHref: /azure/devops/project/navigation/index
+    - name: Migrate & import
+      tocHref: /azure/devops/migrate/
+      topicHref: /azure/devops/migrate/migration-overview
+    - name: Web portal navigation
+      tocHref: /azure/devops/project/navigation/
+      topicHref: /azure/devops/project/navigation/index
+    - name: Resources
+      tocHref: /azure/devops/organizations/security/
+      topicHref: /azure/devops/organizations/security/permissions-access
