--- a/docs/organizations/security/toc.yml
+++ b/docs/organizations/security/toc.yml
@@ -1,133 +1,133 @@
 - name: About security and identity  
-  href: about-security-identity.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+  href: about-security-identity.md
 - name: Quickstarts
   items:
   - name: View permissions 
-    href: view-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: view-permissions.md
   - name: Look up the organization owner or a Project Administrator
-    href: lookup-organization-owner-admin.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: lookup-organization-owner-admin.md
   - name: Add users to a project or team 
-    href: add-users-team-project.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: add-users-team-project.md
   - name: Set Git or TFVC repository permissions
-    href: set-git-tfvc-repository-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: set-git-tfvc-repository-permissions.md
   - name: Add administrators or set permissions at the project or collection level
-    href: set-project-collection-level-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: set-project-collection-level-permissions.md
 - name: Tutorials 
   items:
   - name: Set up Active Directory or Azure AD  
-    href: setup-ad-aad.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: setup-ad-aad.md
   - name: Add AD/Azure AD security groups to built-in security groups  
-    href: add-ad-aad-built-in-security-groups.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: add-ad-aad-built-in-security-groups.md
   - name: Change individual permissions 
-    href: change-individual-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: change-individual-permissions.md
   - name: Grant or restrict permissions to select tasks
-    href: restrict-access.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: restrict-access.md
   - name: Remove user accounts 
-    href: remove-users-prohibit-access.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: remove-users-prohibit-access.md
   - name: Get started as a Stakeholder
-    href: get-started-stakeholder.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: get-started-stakeholder.md
 - name: Concepts
   items:
   - name: About permissions and groups
-    href: about-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: about-permissions.md
   - name: About security roles
-    href: about-security-roles.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: about-security-roles.md
   - name: About access levels 
-    href: access-levels.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: access-levels.md
   - name: Azure Active Directory groups
-    href: ../accounts/access-with-azure-ad.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/access-with-azure-ad.md
   - name: Active Directory groups 
-    href: /azure/devops/server/admin/setup-ad-groups?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: /azure/devops/server/admin/setup-ad-groups
 - name: How-to guides
   items:
   - name: Add users to Azure DevOps Services
-    href: ../accounts/add-organization-users.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/add-organization-users.md
   - name: Change access levels
-    href: change-access-levels.md?view=azure-devops-2019&toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: change-access-levels.md
   - name: Export user list  
     href: export-users-audit-log.md   
   - name: Set permissions for an object or role
     items: 
     - name: Set dashboard permissions
-      href: ../../report/dashboards/dashboard-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../report/dashboards/dashboard-permissions.md
     - name: Set Git branch permissions
-      href: ../../repos/git/branch-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../repos/git/branch-permissions.md
     - name: Set pipeline permissions
-      href: ../../pipelines/policies/set-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../pipelines/policies/set-permissions.md
     - name: Provide Stakeholders access to edit pipelines
-      href: provide-stakeholder-pipeline-access.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: provide-stakeholder-pipeline-access.md
     - name: Set package feed permissions
-      href: ../../artifacts/feeds/feed-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../artifacts/feeds/feed-permissions.md
     - name: Set Wiki permissions
-      href: ../../project/wiki/manage-readme-wiki-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../project/wiki/manage-readme-wiki-permissions.md
     - name: Set work tracking and plan permissions 
-      href: set-permissions-access-work-tracking.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: set-permissions-access-work-tracking.md
     - name: Set feedback permissions
-      href: ../../project/feedback/give-permissions-feedback.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../project/feedback/give-permissions-feedback.md
     - name: Set permissions to manage extensions
-      href: ../../marketplace/how-to/grant-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: ../../marketplace/how-to/grant-permissions.md
   - name: Manage security groups
-    href: add-manage-security-groups.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: add-manage-security-groups.md
   - name: Manage tokens and namespaces
-    href: manage-tokens-namespaces.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: manage-tokens-namespaces.md
   - name: Set SQL Server report permissions 
-    href: ../../report/admin/grant-permissions-to-reports.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../../report/admin/grant-permissions-to-reports.md
   - name: Set SharePoint project portal permissions
-    href: set-sharepoint-permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: set-sharepoint-permissions.md
   - name: Sign-in to the web or a client
-    href: ../projects/connect-to-projects.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../projects/connect-to-projects.md
   - name: Authenticate access with personal access tokens
-    href: ../accounts/use-personal-access-tokens-to-authenticate.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/use-personal-access-tokens-to-authenticate.md
   - name: Revoke user PATs - for admins
-    href: ../accounts/admin-revoke-user-pats.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/admin-revoke-user-pats.md
 - name: Troubleshooting
   items:
   - name: Add and delete users
-    href: ../accounts/faq-add-delete-users.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/faq-add-delete-users.md
   - name: Add team members
-    href: ../accounts/faq-add-team-members.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/faq-add-team-members.md
   - name: Authenticate & invite with GitHub
-    href: faq-github-authentication.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: faq-github-authentication.md
   - name: Access with Azure AD
-    href: ../accounts/faq-azure-access.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/faq-azure-access.md
   - name: Change app access
-    href: ../accounts/faq-change-app-access.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/faq-change-app-access.md
   - name: Add administrators
-    href: ../accounts/faq-add-administrators.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/faq-add-administrators.md
   - name: Manage group-based licensing
-    href: ../accounts/faq-manage-group-based-licensing.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../accounts/faq-manage-group-based-licensing.md
   - name: Resolve connection issues
-    href: ../../user-guide/troubleshoot-connection.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../../user-guide/troubleshoot-connection.md
   - name: "TF31002: Unable to connect"
-    href: ../../reference/error/tf31002-unable-connect-tfs.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: ../../reference/error/tf31002-unable-connect-tfs.md
   - name: Trace permissions
     href: faq-trace-permissions.md  
 - name: Reference
   items:
   - name: Default permissions & access 
-    href: permissions-access.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: permissions-access.md
   - name: Permission lookup guide 
-    href: permissions-lookup-guide.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: permissions-lookup-guide.md
   - name: Permissions & groups 
-    href: permissions.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: permissions.md
   - name: Git permissions prior to TFS 2017 Update 1
-    href: git-permissions-before-2017.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: git-permissions-before-2017.md
   - name: Allowed address lists and network connections
-    href: allow-list-ip-url.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: allow-list-ip-url.md
     displayname: Personal access tokens, PATs, basic auth, Oauth, SSH
   - name: Web site settings and security
-    href: /azure/devops/server/admin/websitesettings?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: /azure/devops/server/admin/websitesettings
   - name: Azure DevOps Services 
     items:
     - name: Data protection overview
-      href: data-protection.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: data-protection.md
     - name: Data location
-      href: data-location.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+      href: data-location.md
     - name: Credential storage
-      href: credential-storage.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json 
+      href: credential-storage.md 
   - name: TFSSecurity command
-    href: /azure/devops/server/command-line/tfssecurity-cmd?toc=/azure/devops/organizations/toc.json&bc=/azure/devops/organizations/breadcrumb/toc.json
+    href: /azure/devops/server/command-line/tfssecurity-cmd
   - name: Security glossary 
-    href: security-glossary.md?toc=/azure/devops/organizations/security/toc.json&bc=/azure/devops/organizations/security/breadcrumb/toc.json
+    href: security-glossary.md
 
 
