--- a/docs/user-guide/toc.yml
+++ b/docs/user-guide/toc.yml
@@ -1,9 +1,9 @@
 - name: What is Azure DevOps?
   href: what-is-azure-devops.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json  
 - name: Overview of services
-  href: services.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json  
+  href: services.md
 - name: Azure DevOps Services vs. Azure DevOps Server
-  href: about-azure-devops-services-tfs.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json    
+  href: about-azure-devops-services-tfs.md    
 - name: Quickstarts for users
   items:
   - name: Code with Git
@@ -11,9 +11,9 @@
   - name: Set up continuous integration and delivery
     href: ../pipelines/get-started-designer.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json  
   - name: "Plan and track work"
-    href: ../boards/get-started/plan-track-work.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json  
+    href: ../boards/get-started/plan-track-work.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json
   - name: "Add and run manual tests"
-    href: add-run-manual-tests.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json  
+    href: add-run-manual-tests.md
   - name: View permissions
     href: ../organizations/security/view-permissions.md?toc=/azure/devops/get-started/toc.json&bc=/azure/devops/get-started/breadcrumb/toc.json  
 - name: Quickstarts for admins
